--- a/_units/05.md
+++ b/_units/05.md
@@ -12,7 +12,7 @@ authors:
  - Psyche Loui 
 topics: [Pitch, Interval, Theory of Pitch Perception, Tonality, Key Area]
 test_questions:
- - Calculate the sizes of following intervals.  Pythagorean major third (81/64),  septimal minor seventh (7/4) and  undecimal augmented fourth (11/8). Determine how much they deviate from their equal-tempered counterparts.
+ - Calculate the sizes of following intervals.  Pythagorean major third (81/64),  septimal minor seventh (7/4) and undecimal augmented fourth (11/8). Determine how much they deviate from their equal-tempered counterparts.
 
  - The calculation of virtual pitch was attributed to cubic difference tones  in past which, strikingly, yield similar results. Explain why the brain will most likely still use a different method and give an example where difference tones and virtual pitch differ.
  
@@ -122,15 +122,10 @@ The following are four tones with differing numbers of partials, but with the sa
   
 The fundamental frequency of a sound is also known as its periodicity pitch, and is shorthanded as F0.
 
-# Virtual Pitch
+## Virtual Pitch
 
-Sometimes, pitch is perceived at a fundamental frequency even when energy is nonexistent at the frequency of the fundamental. This is known as virtual pitch. Virtual pitch, also known as the missing fundamental, is a classic phenomenon in audition where sound is perceived at a frequency where no energy is present. When energy from harmonic components other than the fundamental is present at integer multiples of the fundamental frequency, the brain is able to infer a virtual pitch at the missing fundamental. Mechanisms that the brain may be using to infer virtual pitch is still an issue of debate, although various models of pitch perception (see below) have been proposed to explain this perceptual phenomenon.
+Sometimes, pitch is perceived at a fundamental frequency even when energy is nonexistent at the frequency of the fundamental. This is known as virtual pitch. Virtual pitch, also known as the missing fundamental, is a classic phenomenon in audition where sound is perceived at a frequency where no energy is present. When energy from harmonic components other than the fundamental is present at integer multiples of the fundamental frequency, the brain is able to infer a virtual pitch at the missing fundamental. Mechanisms that the brain may be using to infer virtual pitch is still an issue of debate, although various models of pitch perception (see below) have been proposed to explain this perceptual phenomenon which is akin to subjective contour in vision.
 Virtual pitch is only perceived if the missing fundamental frequency lies within the existence region for pitch, which is approximately the frequency range of 30Hz to 3.2 kHz (Pressnitzer et al, 2001).
-
-Virtual pitch demonstrations (from ASA demonstration CD): 
-Spectral and virtual pitch: you will hear a tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips. 
-
-The video features autocorrelograms of the auditory signal (see below for an explanation).
 
    <div align="center">
     <video controls src="/MUTOR/assets/audios/unit5_40_Masking_Spectral_And_Virtual_Pitch.mp4">
@@ -143,11 +138,14 @@ The video features autocorrelograms of the auditory signal (see below for an exp
       Your browser does not support the video element.
     </video>
    </div>
+   
+Virtual pitch demonstrations (from ASA demonstration CD): 
+Spectral and virtual pitch: you will hear the tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips. The video features _autocorrelograms_ of the auditory signal (see below for an explanation).
 
-The brain recognizes the fundamental pitch in harmonic and some inharmonic sounds even in the absence of lower partials. {% comment %} Prerequisite: {% endcomment %} For this you would need three adjacent partials. Periodicity remains intact in the absence of fundamental.
 
-However, this does not explain the perception of strike notes in bells. Therefore, Terhardt has formulated the theory of pattern recognition (comparable to subjective contour in vision, see Kanizsa triangle).
+## Strike notes and other curiosities
 
+Terhardt claims that at least three adjacent partials are necessary for the brain to most effectively infer the fundamental pitch in harmonic sounds in the absence of lower partials, such as 6/7/8 oder 10/11/12. However, he found that for 11/12/13, the inferred virtual pitch differs slightly from the frequency of the period (F0). This is hinting at a mechanism for pitch detection that takes more than just the periodicity of a signal into consideration. Starting from this observation and the phenomenon of _strike notes_ in bells - pitches clearly perceived but absent from the bell sprectrum -, Terhardt has formulated a theory of _pattern recognition_ of pitch or _template theory_ (see below).  
 
 # Pitch Perception Models
 
@@ -165,7 +163,6 @@ According to Helmholtz, the ear is a frequency analyzer: Sounds create "resonanc
 The hearing range is divided into 24 barks (critical bandwidths), which in the middle roughly corresponds to the size of a minor third (border between step vs. leap perception).
 
 {% include img-figure url="/MUTOR/assets/images/place-barks.png" description="Frequency vs Bark and ERB" %}
-
 
 ## Temporal theory
 
@@ -189,7 +186,7 @@ Model of the summation autocorrelogram (Lyon / Slaney, Patterson). The brain sea
 {% comment %}Figure  6 {% endcomment %}. 
 The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by taking the autocorrelation in each channel of the neural activation pattern shown in Figure 5.42. The high correlation every 5 msec is used to predict a 200-Hz pitch (reciprocal of 5 msec) for this stimulus. Panel B depicts the summary autocorrelogram for the 200-Hz-fundamental harmonic complex obtained by summing the correlations across channels for the autocorrelogram shown in panel A.  
 
-{% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Terhardt: 11:12:13; Low-pitched triangle wave" %}
+{% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Low-pitched triangle wave" %}
 
 ## Phase locking
 
