--- a/_units/05.md
+++ b/_units/05.md
@@ -34,9 +34,11 @@ mathjax: true
 
 The concept of sound frequencies was first introduced in [Unit 01](/MUTOR/units/01.html). While frequency is a physical attribute which characterizes waves of sound energy, pitch is a perceptual attribute which describes our experience of tones, whether pure (one partial) or complex (several partials). Generally, the higher the frequency of a sound, the higher the perceived pitch. As the spectral composition and temporal development of a sound determine pitch and timbre, an unambiguous pitch percept is only formed for harmonic sounds whose partials have frequencies that are multiples of the fundamental frequency (which also corresponds to the perceived pitch). Inharmonic sounds, in turn, whose partials don't follow this simple rule, have ambiguous pitch caused by competing virtual pitches.
 
+# Pitch
+
 Pitch is thought of as a morphophoric, or form-bearing, medium. This means that patterns of pitch can take on a certain form (i.e. melody) which can be transposed - shifted up or down in pitch - and remain invariant in its perceptual structure. Musically, this accounts for how the same melody can be transposed into different keys and still be recognizable as the same theme.
 
-# Frequency and Pitch
+## Frequency and Pitch
 
 Pitch is perceived in sounds that are periodic; i.e. sounds with features which recur at regular frequencies. Aperiodic sounds are more likely to be perceived not as pitches, but as noise or transient (quickly-changing) clicks. Thus, pitch perception depends on frequencies of sounds entering the ears. 
 
@@ -46,7 +48,7 @@ Our percept of pitch is **logarithmically organized** such that an octave above 
 
 {% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" %}
 
-# Fundamental Frequency
+## Fundamental Frequency
 
 The percept of pitch generally correlates with the fundamental frequency of sound waves. The fundamental frequency is defined as the highest common factor of all sound waves from the same source, which gives rise to the pitch percept. 
 
