--- a/_units/05.md
+++ b/_units/05.md
@@ -144,53 +144,47 @@ Virtual pitch is only perceived if the missing fundamental frequency lies within
 Virtual pitch demonstrations (from ASA demonstration CD): 
 Spectral and virtual pitch: you will hear the tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips. The video features _autocorrelograms_ of the auditory signal (see below for an explanation).
 
-
 ## Strike notes and other curiosities
 
-Terhardt claims that at least three adjacent partials are necessary for the brain to most effectively infer the fundamental pitch in harmonic sounds in the absence of lower partials, such as 6/7/8 oder 10/11/12. However, he found that for 11/12/13, the inferred virtual pitch differs slightly from the frequency of the period (F0). This is hinting at a mechanism for pitch detection that takes more than just the periodicity of a signal into consideration. Starting from this observation and the phenomenon of _strike notes_ in bells - pitches clearly perceived but absent from the bell sprectrum -, Terhardt has formulated a theory of _pattern recognition_ of pitch or _template theory_ (see below).  
+Terhardt claims that at least three adjacent partials are necessary for the brain to most effectively infer the fundamental pitch in harmonic sounds in the absence of lower partials, such as 6/7/8 oder 10/11/12. However, he found that for 11/12/13, the inferred virtual pitch differs slightly from the frequency of the period (F0). This is hinting at a mechanism for pitch detection that takes more than just the periodicity of a signal into consideration. Starting from this observation and the phenomenon of _strike notes_ in bells - pitches clearly perceived but absent from the bell sprectrum -, Terhardt has formulated a theory of _pattern recognition_ of pitch or _template theory_ (see below). Terhardt asserts that, typically, the first six partials are processed to create a stable pitch perceipt.
 
 # Pitch Perception Models
 
 For centuries, hearing and musical scientists have attempted to build an optimal model that would account for pitch perception. An accurate model of pitch perception must describe how components of frequencies are converted into pitch in the logarithmic scale; it must also explain how fundamental frequencies are calculated, as well as the phenomenon of virtual pitch. Early pitch perception models fall under two categories: spectral models and temporal models.
-Spectral models of pitch perception, which are based on the frequency spectrum of sounds, tend to start with the Fourier analysis, which convert sound waves into its frequency components. One of the early spectral or place models was proposed by Helmholtz who speculated that each sinusoidal component of a sound triggers sensation at a place coding for pitch. In contrast, temporal models make use of the periodicity of waveforms comprising sounds. By calculating the time between periodic points in the waveform, the fundamental frequency can be calculated. 
+
+## Spectral Models
+
+Spectral models of pitch perception, which are based on the frequency spectrum of sounds, tend to start with the Fourier analysis, which convert sound waves into its frequency components. One of the early spectral or place models was proposed by Helmholtz who speculated that each sinusoidal component of a sound triggers sensation at a place coding for pitch. Thus, the ear is a frequency analyzer: Sounds create "resonances" on the basilar membrane triggering nerve impulses. 
+
+{% include img-figure url="/MUTOR/assets/images/unit5_AuditoryFilterbank.png" description="Representations of a harmonic complex tone with a fundamental frequency (F0) of 440 Hz. The upper panel shows the power spectrum. The second panel shows the auditory filterbank, representing the filtering that occurs in the cochlea. The third panel shows the the time-averaged output of the filterbank, or excitation pattern. The fourth panel shows some sample time waveforms at the output of the filterbank, including filters centered at the F0 and the fourth harmonic, illustrating resolved harmonics, and filters centered at the 8th and 12th harmonic of the complex, illustrating harmonics that are less well resolved and show amplitude modulations at a rate corresponding to the F0." %}
+(Source: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4215732/)
+
+## Temporal Models and Phase Locking
+In contrast, temporal models make use of the periodicity of waveforms comprising sounds. According to Schouten, the fundamental frequency can be determined by  calculating the time between periodic points in the waveform. Recent research suggests that the brain is capable of locking into the phase of a sinusoid well above 4000Hz.
+
+{% include img-figure url="/MUTOR/assets/images/temporal-simple.png" description="Periodic waveform of a simple tone"%}
+{% include img-figure url="/MUTOR/assets/images/temporal-complex.png" description="Periodic waveform of a complex tone" %}
+
+## Template Theory
 
 Modern theories of pitch perception take into account both spectral and temporal components of sound. Two types of modern pitch perception theories which receive the most support today are the pattern matching models and the autocorrelation models. Pattern-matching models of pitch perception, such as the harmonic template matching model (e.g. Lin & Hartmann, 1998), postulate that we have stored in our brains a set of templates which, when frequency components are activated, we overlay onto the pattern of activation in order to calculate the fundamental pitch.
 
-The autocorrelation models (Licklider, 1959) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency.
-The debate between pattern matching and autocorrelation models have received widely discussed among hearing researchers in recent years. While new data continues to emerge in support of either model, results from neuroscience looking for autocorrelators or harmonic templates in the auditory system may contribute to resolve these debates.
+## Autocorrelation Models
 
-## Place theory
-
-According to Helmholtz, the ear is a frequency analyzer: Sounds create "resonances" on the basilar membrane that trigger nerve impulses. The basilar membrane acts like a filter bank (bandpass filter) whose individual widths are described by the so-called critical bandwidth.
-The hearing range is divided into 24 barks (critical bandwidths), which in the middle roughly corresponds to the size of a minor third (border between step vs. leap perception).
-
-{% include img-figure url="/MUTOR/assets/images/place-barks.png" description="Frequency vs Bark and ERB" %}
-
-## Temporal theory
-
-According to Schouten, the ear is a counter and can count the peaks and troughs of a wave and pass this information by nerve impulses to the brain.
-
-{% include img-figure url="/MUTOR/assets/images/temporal-complex.png" description="Periodic waveform of a complex tone" %}
-{% include img-figure url="/MUTOR/assets/images/temporal-simple.png" description="Periodic waveform of a simple tone" %}
-
-## Current theories
-
-Truth is probably somewhere in between:
-
-Template theory (Terhardt, Parncutt). The brain creates a template.
-Model of the summation autocorrelogram (Lyon / Slaney, Patterson). The brain searches for periodicity in the output of bandpass filters (channels) and sums them up. As a result, some phenomena can now be explained, which arise by instance by detuning lower partials or transposing sounds with just odd partials.
+The autocorrelation models (Licklider, 1959, further developed by Lyon / Slaney and Patterson) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency. As a result, some phenomena can now be explained, which arise by instance by detuning lower partials or transposing sounds with just odd partials.
 
 {% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram" %}
 
 {% include note author="vg" text="the same as in Unit 02 I have commented all the quotes and references so we can decide a format to do it" %}
 {% comment %} Yost, W.A. Pitch perception. Attention, Perception, & Psychophysics 71, 1701–1715 (2009).  {% endcomment %}
 
-{% comment %}Figure  6 {% endcomment %}. 
-The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by taking the autocorrelation in each channel of the neural activation pattern shown in Figure 5.42. The high correlation every 5 msec is used to predict a 200-Hz pitch (reciprocal of 5 msec) for this stimulus. Panel B depicts the summary autocorrelogram for the 200-Hz-fundamental harmonic complex obtained by summing the correlations across channels for the autocorrelogram shown in panel A.  
+{% comment %}Figure  6 {% endcomment %}
+The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by taking the autocorrelation in each channel {% comment %} of the neural activation pattern shown in Figure 5.42. {% endcomment %} The high correlation every 5 msec is used to predict a 200-Hz pitch (reciprocal of 5 msec) for this stimulus. Panel B depicts the summary autocorrelogram for the 200-Hz-fundamental harmonic complex obtained by summing the correlations across channels for the autocorrelogram shown in panel A.  
+
+The debate between pattern matching and autocorrelation models have received widely discussed among hearing researchers in recent years. While new data continues to emerge in support of either model, results from neuroscience looking for autocorrelators or harmonic templates in the auditory system may contribute to resolve these debates.
+
 
 {% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Low-pitched triangle wave" %}
-
-## Phase locking
 
 # Cognitive Models of Pitch
 
