--- a/_units/05.md
+++ b/_units/05.md
@@ -171,18 +171,16 @@ Modern theories of pitch perception take into account both spectral and temporal
 
 ## Autocorrelation Models
 
-The autocorrelation models (Licklider, 1959, further developed by Lyon / Slaney and Patterson) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency. As a result, some phenomena can now be explained, which arise by instance by detuning lower partials or transposing sounds with just odd partials.
+The autocorrelation models (Licklider, 1959, further developed by Lyon / Slaney and Patterson) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency. These models give credibility by being capable of explaining typical miscalculations of the auditory system which, by instance, arise when detuning lower partials of a harmomic sound or transposing down sounds consisting of odd partials only.
 
-{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram" %}
+{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram (top) and summary autocorrelogram (bottom)" %}
 
 {% include note author="vg" text="the same as in Unit 02 I have commented all the quotes and references so we can decide a format to do it" %}
 {% comment %} Yost, W.A. Pitch perception. Attention, Perception, & Psychophysics 71, 1701–1715 (2009).  {% endcomment %}
 
-{% comment %}Figure  6 {% endcomment %}
 The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by taking the autocorrelation in each channel {% comment %} of the neural activation pattern shown in Figure 5.42. {% endcomment %} The high correlation every 5 msec is used to predict a 200-Hz pitch (reciprocal of 5 msec) for this stimulus. Panel B depicts the summary autocorrelogram for the 200-Hz-fundamental harmonic complex obtained by summing the correlations across channels for the autocorrelogram shown in panel A.  
 
 The debate between pattern matching and autocorrelation models have received widely discussed among hearing researchers in recent years. While new data continues to emerge in support of either model, results from neuroscience looking for autocorrelators or harmonic templates in the auditory system may contribute to resolve these debates.
-
 
 {% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Low-pitched triangle wave" %}
 
