--- a/_units/05.md
+++ b/_units/05.md
@@ -182,21 +182,23 @@ The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by ta
 
 The debate between pattern matching and autocorrelation models have received widely discussed among hearing researchers in recent years. While new data continues to emerge in support of either model, results from neuroscience looking for autocorrelators or harmonic templates in the auditory system may contribute to resolve these debates.
 
-{% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Low-pitched triangle wave" %}
-
 # Cognitive Models of Pitch
 
 American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales. 
 
-{% include img-figure url="/MUTOR/assets/images/helix.png" description="Pitch helix" %}
+{% include img-figure url="/MUTOR/assets/images/helix.png" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." %}
 
-Taking the relationships into consideration, Shepard eventually adjusted the helix to a five-dimensional model.
+Taking the importance of fifths into consideration, Shepard extended his model to a double helix.
 
-{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Pitch helix" %}
+{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Shepard's double helix of pitch" %}
 
-The so—called Tritonus paradox can be demonstrated with Shepard tones. A tritone is heard depending on its context either as falling or rising.
+A five-dimensional model projecting the helix onto a torus accounts for third-relationships and the closed circle of fifths.
+
+{% include img-figure url="/MUTOR/assets/images/unit5_helixtorus.png" description="Double Helix winding a torus" %}
 
 Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes. 
+
+Research in gerbils (a small rodent) and humans also found a double-helical structure in the lateral lemniscus (VNLL, a region located in the brainstem) that "might play an important role in peridiocity analysis" (Langner, 2015) and has thus been labeled the auditory double helix.
 
 # Intervals
 
