--- a/_units/05.md
+++ b/_units/05.md
@@ -202,7 +202,8 @@ Research in gerbils (a small rodent) and humans also found a double-helical stru
 
 # Intervals
 
-The mathematical relationship between an interval created by two pitches and their respective frequencies is given by this formula:
+Intervals arise when two pitches are either played in succession or simultaneously. 
+The mathematical relationship of an interval created by two pitches and their respective frequencies is given by this formula:
 
 \begin{equation}
 I=1200\cdot log_2(\frac{F_1}{F_0}) = 1200\cdot \frac{log_{10}(\frac{F_1}{F_0})}{log_{10}(2)}
@@ -234,12 +235,14 @@ The unit for I is cents — one cent being a 1/100th of a semitone.
 
 The fifth (3/2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity to the octave whose tones are perceived as _equivalent_.
 
-The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and is thus indicative of the holistic, self-similar or fractal nature of tonal music.
+The special significance of the fifth manifests itself in the fact that it appears in four different categories of music and is thus indicative of the holistic, self-similar or fractal nature of tonal music.
 
 1. Harmonic Series
 1. Intervals of Complex tones
 1. Function: tonic - dominant
 1. Key Areas: C major - G major
+
+Heinrich Schenker has developed an analysis method (Schenkerian analysis) demonstrating that nearly every piece of tonal music can be reduced to a simple tonic - dominant - tonic relationship (ursatz). 
 
 # Tonality and Probe Tone Method
 
