--- a/_units/05.md
+++ b/_units/05.md
@@ -198,21 +198,23 @@ A five-dimensional model projecting the helix onto a torus accounts for third-re
 
 Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes. 
 
-Research in gerbils (a small rodent) and humans also found a double-helical structure in the lateral lemniscus (VNLL, a region located in the brainstem) that "might play an important role in peridiocity analysis" (Langner, 2015) and has thus been labeled the auditory double helix.
+Research in gerbils (a small rodent) and humans also found a double-helical structure in the lateral lemniscus (VNLL, a region located in the brainstem) that "might play an important role in peridiocity analysis" (Langner, 2015) and has thus been labeled the _auditory double helix_.
 
 # Intervals
 
 Intervals arise when two pitches are either played in succession or simultaneously. 
-The mathematical relationship of an interval created by two pitches and their respective frequencies is given by this formula:
+The mathematical relationship of an interval created by the frequency ratio of two pitches is given by this formula:
 
 \begin{equation}
 I=1200\cdot log_2(\frac{F_1}{F_0}) = 1200\cdot \frac{log_{10}(\frac{F_1}{F_0})}{log_{10}(2)}
 \label{eq:FrequencyToPitch}
 \end{equation}
 
-Replace F1 and F0 by integer numbers and get the result by entering the formula into a calculator or browser.  
+Replace F1 and F0 by integer numbers and get the result by entering the formula into a calculator or browser.  The unit for I is cents — one cent being a 1/100th of a semitone.
 
-The unit for I is cents — one cent being a 1/100th of a semitone.
+Intervals are constituents of scales, melodies and harmonies and are judged according to their tonal stability. Music theory differentiates between perfect consonances, imperfect consonances and dissonances. It has been shown that these categories are not stable and have changed over the course of music history; and  therefore shouldn't be confounded with sensory dissonance - a bottom-up phenomenon arising in the inner ear.
+
+Table 5.1 lists the intervals of the chromatic scale derived from the harmonic series in comparison to the tempered 12-tone scale. Devations can be as much as 17 cents for the tritone and as little as 2 cents for the fifth.
 
 {% include begin-table description="Intervals of the chromatic scale" %}
 | Interval (Name) | Frequency ratio | Interval (Size in Cents) | Size of Tempered Interval
@@ -222,7 +224,7 @@ The unit for I is cents — one cent being a 1/100th of a semitone.
 | minor third | 6/5 | 316 | 300 |
 | major third | 5/4 | 386 | 400 |
 | just fourth | 4/3 | 498 | 500 |
-| diminished fifth | 7/5 | 583 | 600 |
+| tritone | 7/5 | 583 | 600 |
 | juist fifth | 3/2 | 702 | 700 |
 | minor sixth | 8/5 | 814 | 800 |
 | major sixth | 5/3 | 884 | 900 |
@@ -233,7 +235,7 @@ The unit for I is cents — one cent being a 1/100th of a semitone.
 
 # The Fifth as the Generator of Tonality
 
-The fifth (3/2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity to the octave whose tones are perceived as _equivalent_.
+The fifth (3/2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. The fifth and its compound variant, the just twelfth (3/1), have a similarity to the octave whose tones are perceived as _equivalent_.
 
 The special significance of the fifth manifests itself in the fact that it appears in four different categories of music and is thus indicative of the holistic, self-similar or fractal nature of tonal music.
 
@@ -262,15 +264,22 @@ The arrangement of the 24 keys on the surface of a torus can now be derived from
 
 {% include img-figure url="/MUTOR/assets/images/torus_keys.png" description="Representation of Key Areas on the Surface of a Torus" %}
 
-Interestingly, Arnold Schönberg in his book "Structural Functions of Harmony" came up with a chart of key regions which is strikingly similar to the torus unfolded into two dimensions.
+Janata et al (2003) found neural correlates of movement on the surface of the torus in the ventromedial prefrontal cortex. Stable voxels over many scanning sessions, but unstable as to which voxels correspond to which area in tonal space (key). It is as if the torus moves around in your head over different days.
+Video showing continuously modulating melody activating the surface of the torus.
+
+Interestingly, Arnold Schönberg in his book "Structural Functions of Harmony" devised a chart of key regions which is strikingly similar to the torus unfolded into two dimensions.
 
 {% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" %}
+
+The Neo-Riemannian _tonnetz_ has also been successfully projected onto the surface of a torus.
+
+{% include img-figure url="/MUTOR/assets/images/unit5_tonnetz-torus.jpg" description="Neo-Riemannian tonnetz" %}
 
 # Applications of Key Space
 
 ## Music Generation
 
-At the University of California, Berkeley, David Wessel has instigated a program that uses the opposite approach: users move their mouse over the surface of the torus, controlling a generative process that generates profiles according to the melodies; the height of each bar for a given tone determines the frequency of its appearance. This makes it possible to continuously modulate from key to key. In the lower illustration, the torus has been cut in two dimensions and "laid flat".
+At the University of California, Berkeley, David Wessel has inspired the development of a Max patch that uses the opposite approach: users move their mouse over the surface of the torus, controlling a generative process that generates profiles according to the melodies; the height of each bar for a given tone determines the frequency of its appearance. This makes it possible to continuously modulate from key to key. In the lower illustration, the torus has been cut in two dimensions and "laid flat".
 
 {% include note author="gh" text="Images of Key Space Max patch need to be inserted here" %}
 
@@ -285,8 +294,21 @@ With the help of Krumhansl's model, when playing (tonal) music, it is possible t
 </video>
 {% include end-figure %}
 
-{% include note author="vg" text="I don't know why I can not reproduce this video on my browser" %}
+# References
 
-# Summary
+- Pressnitzer, D; Patterson, R; & Krumbholtz. (2001). The lower limit of melodic pitch. JASA, 2076-2084.
+- de Cheveigne, A. (2004) Pitch perception models. In Plack, C. and Oxenham. A. (eds) Pitch. New York: Springer Verlag. http://recherche.ircam.fr/equipes/pcm/cheveign/pss/2004_pitch_SHAR.pdf 
+- Krumhansl,  C.L.  (1990). Cognitive foundations  o f musical pitch.  New York:  Oxford University Press.
+- Licklider, J. C. R. (1951). A duplex theory of pitch perception. The Journal of the Acoustical Society of America, 23(1), 147-147.
+- Lin & Hartmann, 1998. http://www.pa.msu.edu/acoustics/template.pdf 
+- Patterson, R. D., Allerhand, M. H., & Giguere, C. (1995). Time‐domain modeling of peripheral auditory processing: A modular architecture and a software platform. The Journal of the Acoustical Society of America, 98(4), 1890-1894.
+- Schoenberg, A., & Stein, L. (1969). Structural functions of harmony (No. 478). WW Norton & Company.
+- Shepard, R.N. (1982) Geometrical Approximations to the Structure of Musical Pitch. Psychological Review 89(4)
+- Slaney, M., & Lyon, R. F. (1993). On the importance of time-a temporal representation of sound. Visual representations of speech signals, 95116.
+- Warren, J. D., Uppenkamp, S., Patterson, R. D., & Griffiths, T. D. (2003). Separating pitch chroma and pitch height in the human brain. Proceedings of the National Academy of Sciences, 100(17), 10038-10042.
+
+# Links and Downloads
+
+- 
 
 {% include unit_postamble.md %}
