--- a/_units/05.md
+++ b/_units/05.md
@@ -233,7 +233,7 @@ Table 5.1 lists the intervals of the chromatic scale derived from the harmonic s
 | octave | 2/1 | 1200 | 1200 |
 {% include end-table %}
 
-# The Fifth as the Generator of Tonality
+## The Fifth as the Generator of Tonality
 
 The fifth (3/2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. The fifth and its compound variant, the just twelfth (3/1), have a similarity to the octave whose tones are perceived as _equivalent_.
 
@@ -245,6 +245,13 @@ The special significance of the fifth manifests itself in the fact that it appea
 1. Key Areas: C major - G major
 
 Heinrich Schenker has developed an analysis method (Schenkerian analysis) demonstrating that nearly every piece of tonal music can be reduced to a simple tonic - dominant - tonic relationship (ursatz). 
+
+## Tonnetz
+
+The Neo-Riemannian _tonnetz_ ...
+
+{% include img-figure url="/MUTOR/assets/images/unit5_tonnetz-torus.jpg" description="Neo-Riemannian tonnetz" %}
+
 
 # Tonality and Probe Tone Method
 
@@ -271,9 +278,6 @@ Interestingly, Arnold Schönberg in his book "Structural Functions of Harmony" d
 
 {% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" %}
 
-The Neo-Riemannian _tonnetz_ has also been successfully projected onto the surface of a torus.
-
-{% include img-figure url="/MUTOR/assets/images/unit5_tonnetz-torus.jpg" description="Neo-Riemannian tonnetz" %}
 
 # Applications of Key Space
 
