--- a/_units/05.md
+++ b/_units/05.md
@@ -225,7 +225,7 @@ Table 5.1 lists the intervals of the chromatic scale derived from the harmonic s
 | major third | 5/4 | 386 | 400 |
 | just fourth | 4/3 | 498 | 500 |
 | tritone | 7/5 | 583 | 600 |
-| juist fifth | 3/2 | 702 | 700 |
+| just fifth | 3/2 | 702 | 700 |
 | minor sixth | 8/5 | 814 | 800 |
 | major sixth | 5/3 | 884 | 900 |
 | minor seventh | 16/9 | 996 | 1000 |
